--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +24,7 @@
   },
   "homepage": "https://github.com/Nismit/portfolio#readme",
   "dependencies": {
+    "contentful": "^7.4.3",
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
