--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "contentful": "^7.4.3",
     "next": "^8.0.3",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "three": "^0.102.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
