--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-smooth-scrollbar": "^8.0.6",
+    "smooth-scrollbar": "^8.3.1",
     "three": "^0.102.1"
   },
   "devDependencies": {
