--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "contentful": "^7.4.3",
     "next": "^8.0.3",
+    "next-page-transitions": "^1.0.0-beta.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-smooth-scrollbar": "^8.0.6",
