--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
@@ -31,7 +31,9 @@
     "next-page-transitions": "^1.0.0-beta.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
     "react-smooth-scrollbar": "^8.0.6",
+    "redux": "^4.0.1",
     "smooth-scrollbar": "^8.3.1",
     "three": "^0.103.0"
   },
