--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "next-page-transitions": "^1.0.0-beta.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-markdown": "^4.0.6",
     "react-redux": "^6.0.1",
     "react-smooth-scrollbar": "^8.0.6",
     "redux": "^4.0.1",
