--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Nismit/portfolio#readme",
   "dependencies": {
     "contentful": "^7.4.3",
+    "gsap": "^2.1.2",
     "next": "^8.0.3",
     "next-page-transitions": "^1.0.0-beta.1",
     "react": "^16.8.4",
