--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "npm run postinstall && next build && next export",
     "serve": "serve -p 8080",
     "postinstall": "npm run getcontent",
-    "getcontent": "babel-node helpers/getContent.js install",
+    "getcontent": "babel-node src/helpers/getContent.js install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
