--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/Nismit/portfolio#readme",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "contentful": "^7.14.5",
     "gsap": "^3.2.6",
     "next": "^9.3.2",
