--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@emotion/styled": "^10.0.27",
     "contentful": "^7.14.6",
     "gsap": "^3.4.2",
+    "locomotive-scroll": "^3.6.1",
     "next": "^9.3.2",
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "^16.13.1",
