--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
@@ -28,25 +28,25 @@
   },
   "homepage": "https://github.com/Nismit/portfolio#readme",
   "dependencies": {
-    "@emotion/core": "^10.0.35",
-    "@emotion/styled": "^10.0.27",
-    "contentful": "^7.14.6",
-    "gsap": "^3.4.2",
-    "locomotive-scroll": "^3.6.1",
-    "next": "^9.3.2",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "contentful": "^8.4.2",
+    "gsap": "^3.7.0",
+    "locomotive-scroll": "^4.1.1",
+    "next": "^11.0.1",
     "next-page-transitions": "^1.0.0-beta.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5",
-    "smooth-scrollbar": "^8.5.2",
-    "three": "^0.119.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "smooth-scrollbar": "^8.6.2",
+    "three": "^0.129.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
-    "dotenv": "^8.2.0"
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "dotenv": "^10.0.0"
   }
 }
