--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
   "name": "portfolio",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Portfolio Development Environment",
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "export": "npm run postinstall && next build && next export",
-    "serve": "serve -p 8080",
-    "postinstall": "npm run getcontent",
-    "getcontent": "babel-node src/helpers/getContent.js install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,25 +23,17 @@
   },
   "homepage": "https://github.com/Nismit/portfolio#readme",
   "dependencies": {
-    "@emotion/react": "^11.4.0",
+    "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "contentful": "^8.4.2",
-    "gsap": "^3.7.0",
-    "locomotive-scroll": "^4.1.1",
-    "next": "^11.0.1",
-    "next-page-transitions": "^1.0.0-beta.2",
+    "next": "^12.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^6.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "smooth-scrollbar": "^8.6.2",
-    "three": "^0.129.0"
+    "three": "^0.134.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/node": "^7.14.7",
-    "@babel/preset-env": "^7.14.7",
-    "dotenv": "^10.0.0"
+    "@types/node": "^16.11.7",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "^4.4.4"
   }
 }
