--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -31,9 +33,18 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.51",
+    "@storybook/addon-interactions": "^7.0.0-beta.51",
+    "@storybook/addon-links": "^7.0.0-beta.51",
+    "@storybook/blocks": "^7.0.0-beta.51",
+    "@storybook/nextjs": "^7.0.0-beta.51",
+    "@storybook/react": "^7.0.0-beta.51",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "eslint-plugin-storybook": "^0.6.10",
+    "storybook": "^7.0.0-beta.51",
     "typescript": "4.9.5"
   }
 }
