--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Portfolio Development Environment",
   "scripts": {
     "dev": "next dev",
@@ -44,22 +44,22 @@
     "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.0.0-rc.8",
-    "@storybook/addon-interactions": "^7.0.0-rc.8",
-    "@storybook/addon-links": "^7.0.0-rc.8",
-    "@storybook/blocks": "^7.0.0-rc.8",
-    "@storybook/nextjs": "^7.0.0-rc.8",
-    "@storybook/react": "^7.0.0-rc.8",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/nextjs": "^7.0.2",
+    "@storybook/react": "^7.0.2",
     "@storybook/testing-library": "^0.1.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "chromatic": "^6.17.2",
+    "chromatic": "^6.17.3",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "eslint-plugin-storybook": "^0.6.11",
     "fast-glob": "^3.2.12",
-    "storybook": "^7.0.0-rc.8",
+    "storybook": "^7.0.2",
     "typescript": "5.0.4"
   }
 }
