chore(config): disable deno plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,4 +30,5 @@
   "editor.lineNumbers": "on",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
+  "deno.enable": false,
 }
